# yolo-forklift-safety-hub

./: .gitignore  README.md  TODO.md  alarm.db  analyze_roads_final.py  app.py  config.py  db.py  diff_list.txt  entities.py  introduction.md  monitor3.py  mqtt_client.py  publish_test.py  pyproject.toml  requirements.txt  run_test.py  simulate_movement.py
backend/: workers.py
docs/: TODO.md  ui-design-guide.md
static/: main.js
templates/: devices.html  index.html
vue-app/src/components/: SidebarNav.vue
vue-app/src/views/: Dashboard.vue
