[project]
name = "center-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.3",
    "flask-socketio>=5.6.1",
    "openai>=2.30.0",
    "paho-mqtt>=2.1.0",
    "requests>=2.33.1",
    "simple-websocket>=1.1.0",
]
